--- a/yangtao-kotlin/app/src/main/res/values/strings.xml
+++ b/yangtao-kotlin/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Yangtao</string>
+    <string name="action_scan_hanzi">Scan Hanzi</string>
     <string name="action_settings">Settings</string>
 </resources>
