--- a/yangtao-kotlin/app/src/main/res/values/strings.xml
+++ b/yangtao-kotlin/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Yangtao</string>
     <string name="action_scan_hanzi">Scan Hanzi</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_hanzi_detail">HanziDetail</string>
 </resources>
