--- a/yangtao-kotlin/app/src/main/res/values/strings.xml
+++ b/yangtao-kotlin/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_scan_hanzi">Scan Hanzi</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_hanzi_detail">HanziDetail</string>
+    <string name="scan_dialog_yes">Correct</string>
+    <string name="scan_dialog_no">Wrong</string>
 </resources>
